--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.461.0",
     "next": "14.2.18",
     "next-intl": "^3.25.1",
     "react": "18.3.1",
